# threadlike

./: .gitmodules  CMakeLists.txt  README.md  flake.nix
include/: argobots.h  rtw.h  threading.h  threads.h
scripts/: abt-install.sh
src/: argobots.h  fibers.h  main.cpp  threading.h
